--- a/about.css
+++ b/about.css
@@ -11,6 +11,16 @@ body{
     background-repeat: no-repeat;
     line-height: 1.2;
 }
+.button {
+  background-color: #04AA6D; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
 .heading{
     width: 90%;
     display: flex;
