--- a/about.css
+++ b/about.css
@@ -14,6 +14,29 @@ body{
     justify-content: center;
     text-align: center;
 }
+    body{
+    background-color: lightblue;
+    background-position: 20px;
+    background-size: contain;
+    background-repeat: no-repeat;
+    line-height: 1.2;
+}
+    button#back {
+    border: none;
+    border-radius: 5px;
+    padding: 0.5rem 1rem;
+    cursor: pointer;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+    transition: transform 0.2s ease, background-color 0.3s ease;
+    margin: 4em;
+}
+      
+#back:hover {
+  background-color: #d2dff5;
+  color: #1a73e8;
+  transform: translateY(-5px);
+}
+   
 .heading{
     width: 90%;
     display: flex;
