--- a/about.css
+++ b/about.css
@@ -20,8 +20,8 @@ button#back {
     padding: 0.5rem 1rem;
     cursor: pointer;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
-    transition: transform 0.2s ease, background-color 0.3s ease;
-    margin: 4em;
+    transition: transform 0.2s ease, background-color 0.3s ease lightblue;
+    margin: 2em;
 }
       
 #back:hover {
