--- a/about.css
+++ b/about.css
@@ -16,20 +16,19 @@ body{
 }
 button#back {
     border: none;
-    border-radius: 5px;
+    border-radius: 10px;
     padding: 0.5rem 1rem;
     cursor: pointer;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
-    transition: transform 0.2s ease, background-color 0.3s ease;
-    margin: 4em;
+    box-shadow: 0 3px 5px rgba(0, 0, 0, 0.5);
+    transition: transform 0.2s ease, background-color 0.3s ease lightblue;
+    margin: 2em;
 }
       
 #back:hover {
   background-color: #d2dff5;
   color: #1a73e8;
   transform: translateY(-5px);
-}
-   
+}  
 .heading{
     width: 90%;
     display: flex;
