--- a/about.css
+++ b/about.css
@@ -21,7 +21,7 @@ button#back {
     cursor: pointer;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
     transition: transform 0.2s ease, background-color 0.3s ease;
-    margin: 4em;
+    margin: 4em 0 0 4em;
 }
       
 #back:hover {
